Tests/typing/bad/testfile-duplicate-1.jl
function f(x,x) x end
